deployment/badger-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: badger
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: badger
      name: badger
    spec:
      containers:
      - env:
        - name: MODE
          value: production
          image: microscaling/imagelayers-badger:latest
        imagePullPolicy: IfNotPresent
        name: badger
        resources: {}
        securityContext:
          privileged: false
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
