deployment/imagelayers-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: imagelayers
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: imagelayers
      name: imagelayers
    spec:
      containers:
        - name: imagelayers
          image: microscaling/imagelayers-api:1.1.0
          imagePullPolicy: IfNotPresent
          resources: {}
          securityContext:
            privileged: false
          terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
