deployment/imagelayers-web-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: imagelayers-web
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: imagelayers-web
      name: imagelayers-web
    spec:
      containers:
        - name: imagelayers-web
          image: microscaling/imagelayers-web:1.1.0
          imagePullPolicy: IfNotPresent
          name: imagelayers-web
          resources: {}
          securityContext:
            privileged: false
          terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
