deployment/badger-svc.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-1:*****:certificate/*****
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: https
  labels:
    app: badger
  name: badger
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
    name: http
  - port: 443
    protocol: TCP
    targetPort: 3000
    name: https
  selector:
    app: badger
  sessionAffinity: None
  type: LoadBalancer
