deployment/imagelayers-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: imagelayers
  name: imagelayers
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8888
  selector:
    app: imagelayers
  sessionAffinity: None
  type: ClusterIP
