deployment/imagelayers-web-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: imagelayers-web
  name: imagelayers-web
spec:
  ports:
  - nodePort: 30901
    port: 80
    protocol: TCP
    targetPort: 9000
  selector:
    app: imagelayers-web
  sessionAffinity: None
  type: NodePort
